--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
           And that's how I got into the Udacity course for front end developers. After the course, 
           I felt that programming was something for me and I knew that I had to continue my education.
            First I had to learn Swedish, so I finished SFI and Swedish courses at Komvux,
-            then Programmering 1 with A grade at Komvux, then Software Development Academy at Lund University
-             and now I'm studying at Lexicon and Foo Cafe courses. Along the way, I did many online courses
+            then Programmering 1 with A grade at Komvux, then Software Development Academy at Lund University and programming course at Lexicon. Along the way, I did many online courses
               and worked on many individual and group projects.</p>
               <ul class="more-about-list">
                   <li>HTML, CSS, JAVASCRIPT, BOOTSTRAP</li>
