--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     and learning new technologies needed for the work as a full stack developer. I took part in the implementation of
     various individual and group projects related to HTML, CSS, JavaScript, C# and Java. I am ready for new challenges and to work with a great team.</p>
 <div class="more-about-container">
-    <p class="more-about has-dropcap">My adventure with programming started here in Sweden.
+    <p class="more-about has-dropcap">My adventure with programming started in Sweden.
          I became interested in this field under the influence of various articles.
           I have applied for a Google project for people who want to start learning programming. 
           And that's how I got into the Udacity course for front end developers. After the course, 
           I felt that programming was something for me and I knew that I had to continue my education.
            First I had to learn Swedish, so I finished SFI and Swedish courses at Komvux,
-            then Programmering 1 with A grade at Komvux, then Software Development Academy at Lund University and programming course at Lexicon. Along the way, I did many online courses
+            then Programmering 1 with A grade at Komvux, Software Development Academy at Lund University and programming course at Lexicon. Along the way, I did many online courses
               and worked on many individual and group projects.</p>
               <ul class="more-about-list">
                   <li>HTML, CSS, JAVASCRIPT, BOOTSTRAP</li>
