--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Wiktoria Dobrzewinska</title>
+    <meta name="description" content="Wiktoria Dobrzewinska | Portfolio ">
+    <meta name="keywords" content="Portfolio, HTML, CSS, JavaScript, C#, Java, Wiktoria Dobrzewinska">
+    <meta name="author" content="Wiktoria Dobrzewinska">
+    <title>Portfolio | Wiktoria Dobrzewinska</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -43,18 +46,17 @@
 <div class="about-container" id="about">
   
    <h2 class="about">Some words about me</h2> 
-   <p class="about-paragraph">Programming is something that makes me want to learn more and more and that is why I am actively striving to expand my knowledge in this field
-    and learning new technologies needed for the work as a full stack developer. I took part in the implementation of
-    various individual and group projects related to HTML, CSS, JavaScript, C# and Java. I am ready for new challenges and to work with a great team.</p>
+   <p class="about-paragraph">Programming is something that make me want to learn more and more and that is why I am actively striving to expand my knowledge in this field
+    and learning new technologies needed for the work as a software developer. I took part in the implementation of
+    various individual and group projects related to HTML, CSS, JavaScript, C# and Java. I am a friendly, helpful and polite person with a good communication skills. I am always enthusiastic to learn and undertake new challenges. </p>
 <div class="more-about-container">
-    <p class="more-about has-dropcap">My adventure with programming started in Sweden.
-         I became interested in this field under the influence of various articles.
-          I have applied for a Google project for people who want to start learning programming. 
-          And that's how I got into the Udacity course for front end developers. After the course, 
-          I felt that programming was something for me and I knew that I had to continue my education.
-           First I had to learn Swedish, so I finished SFI and Swedish courses at Komvux,
-            then Programmering 1 with A grade at Komvux, Software Development Academy at Lund University and programming course at Lexicon. Along the way, I did many online courses
-              and worked on many individual and group projects.</p>
+    <p class="more-about has-dropcap">My adventure with programming started in 2016, the year when I moved to Sweden from Poland.
+        I became interested in this field under the influence of various articles on social media. 
+         I have applied for a Google project for people who want to start learning to program
+         and that's how I've become one of the lucky ones on the Google Developer Challenge Scholarship. After this front-end course with HTML, CSS and JavaScript, 
+         I felt that programming is something for me and I knew that I had to continue my education.
+          I've started to learn Swedish and then made Programmering 1 at Komvux with A degree, Software Development Academy at Lund University and programming course at Lexicon. Along the way, I did many online courses
+             and worked on many individual and group projects. I really would like to finally begin my career by getting a software developer job and by showing my skills and involvement. </p>
               <ul class="more-about-list">
                   <li>HTML, CSS, JAVASCRIPT, BOOTSTRAP</li>
                   <li>C#, .NET, ENTITY FRAMEWORK</li>
@@ -88,6 +90,7 @@
     <p class="project-link"><a href="https://wiktoria2308.github.io/Ickimil/" target="_blank">Link to project</a></p>
 </div>
 </div>
+<h2 class="more-projects"><a href="https://github.com/Wiktoria2308"><span>More projects</span></a></h2> 
 </div>
 
 
