--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
 <footer id="footer">
 <div class="footer-container">
+    <span class="to-top" ><a href="#"><i class="fas fa-chevron-circle-up"></i></a></span>
     <div class="icons">
        <a href="https://www.linkedin.com/in/wiktoria-dobrzewinska-975b32157/" target="_blank"><i class="fab fa-linkedin"></i></a>
        <a href="https://github.com/Wiktoria2308" target="_blank"> <i class="fab fa-github-square"></i></a>
