--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
              and worked on many individual and group projects. I really would like to finally begin my career by getting a software developer job and by showing my skills and involvement. </p>
               <ul class="more-about-list">
                   <li>HTML, CSS, JAVASCRIPT, BOOTSTRAP</li>
-                  <li>C#, .NET, ENTITY FRAMEWORK</li>
+                  <li>C#, ASP.NET Core MVC, ENTITY FRAMEWORK</li>
                   <li>JAVA </li>
                   <li>SQL</li>
                   <li>GIT</li>
