--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           ></a>
         </div>
 
-        <p>@Site by Wiktoria Dobrzewinska | E-mail: 23wiktoria08@gmail.com | Malmö</p>
+        <p>@Site by Wiktoria Dobrzewinska | E-mail: 23wiktoria08@gmail.com | Gdańsk</p>
       </div>
     </footer>
   </body>
